4-Secure_mesh/solution/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: demo
spec:
  selector:
    app: istio-ingressgateway
    istio: demo-ingressgateway
  servers:  
  - port:
       number: 80
       name: http
       protocol: HTTP
    hosts:
    - "http.test.com"
  - port:
       number: 9090
       name: tcp
       protocol: TCP
    hosts:
    - "tcp.test.com"
  - port:
       number: 443
       name: https
       protocol: HTTPS
    hosts:
    - "http.test.com"
    tls:
      mode: SIMPLE
      credentialName: certificates
